# sarica

./: README.md  config.yaml.example  pyproject.toml
src/sarica/: __init__.py  __main__.py  constants.py
