[project]
name = "sarica"
version = "0.3.0"
description = "Select a random video from a random Pornhub subscription."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
    "phub>=4.7.2",
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sarica = "sarica.__main__:main"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sarica"]
